# Highlight-Manger

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  alembic.ini  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
deploy/: PRODUCTION.md  PTERODACTYL.md  phase4-first-task-selection.md  phase4-live-evidence-log.md  phase4-post-launch-growth.md  pterodactyl.md  season2-launch-readiness.md
deploy/supervisor/: highlight-manager.conf
deploy/systemd/: highlight-manager.service
src/highlight_manager/: __init__.py  __main__.py  bot.py  legacy_runtime.py
src/highlight_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_admin_commands.py  test_base_repository.py  test_bootstrap_service.py  test_bot_error_handling.py  test_bot_errors.py  test_coins_service.py  test_config_repository.py  test_config_service.py  test_embeds.py  test_guild_config.py  test_help_command.py  test_match_service_coins.py  test_match_service_play.py  test_match_startup.py  test_match_ui.py  test_play_channel_rules.py  test_profile_identity_sync.py  test_profile_repository.py  test_profile_service.py  test_rank_service.py  test_response_helpers.py  test_reward_service.py  test_season_service.py  test_shop_service.py  test_shop_views.py  test_tournament_service.py  test_views.py  test_voice_service.py  test_vote_service.py
tests/season2/: test_admin_diagnostics.py  test_anti_rematch_checks.py  test_archived_season_history.py  test_brand_ui.py  test_competitive_flow.py  test_duplicate_queue_prevention.py  test_match_ping_targets.py  test_match_rehost_history.py  test_match_review_inbox.py  test_match_ui.py  test_phase4_evidence.py  test_queue_host_transfer.py  test_queue_launch_playlists.py  test_queue_ready_state.py  test_rank_calculator.py  test_rank_fairness_launch.py  test_ready_check_recovery_cleanup.py  test_ready_check_scheduler.py  test_shop_service.py  test_stability_runtime.py  test_staff_coin_adjustment_policy.py  test_stale_queue_scheduler.py  test_tournaments.py  test_ui_cards.py
(+150 files in other folders)
