[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "highlight-manager"
version = "0.1.0"
description = "Production-ready Discord bot for Free Fire Apostado and Highlight matchmaking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.5,<3.0",
  "pymongo>=4.11,<5.0",
  "pydantic>=2.11,<3.0",
  "pydantic-settings>=2.8,<3.0",
  "python-dotenv>=1.0,<2.0",
  "structlog>=25.1,<26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.26,<1.0",
  "ruff>=0.11,<1.0",
]

[project.scripts]
highlight-manager = "highlight_manager.bot:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
where = ["src"]
