[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "highlight-manager"
version = "0.2.0"
description = "Highlight Manger Season 2 competitive Discord management bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2.0",
  "asyncpg>=0.30,<1.0",
  "cachetools>=5.5,<6.0",
  "discord.py>=2.5,<3.0",
  "pillow>=12.1,<13.0",
  "PyNaCl>=1.5,<1.6",
  "davey>=0.1.0,<1.0",
  "pydantic>=2.11,<3.0",
  "pydantic-settings>=2.8,<3.0",
  "pymongo>=4.11,<5.0",
  "python-dotenv>=1.0,<2.0",
  "sqlalchemy>=2.0.39,<3.0",
  "structlog>=25.1,<26.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21,<1.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.26,<1.0",
  "ruff>=0.11,<1.0",
]

[project.scripts]
highlight-manager = "highlight_manager.bot:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests/season2"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
highlight_manager = ["ui/assets/fonts/*.ttf"]
